--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,22 @@
   "version": "0.0.0",
   "description": "",
   "main": "webpack.config.js",
+  "sideEffects": false,
   "dependencies": {
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.7",
+    "@types/material-ui": "^0.21.5",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
