--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,12 @@ build: off
 image: ubuntu
 stack: go 1.11
 
+services:
+  - docker
+
 test_script:
   - mkdir -p $GOPATH/src/github.com/$APPVEYOR_REPO_NAME
   - cp -R ./* $GOPATH/src/github.com/$APPVEYOR_REPO_NAME/
   - cd $GOPATH/src/github.com/$APPVEYOR_REPO_NAME
   - go run tools/ci/main.go unit --timeout 60
+  - go run tools/ci/main.go integration --timeout 300
