--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,5 +10,6 @@ test_script:
   - mkdir -p $GOPATH/src/github.com/$APPVEYOR_REPO_NAME
   - cp -R ./* $GOPATH/src/github.com/$APPVEYOR_REPO_NAME/
   - cd $GOPATH/src/github.com/$APPVEYOR_REPO_NAME
+  - go run tools/ci/main.go proto
   - go run tools/ci/main.go unit --timeout 60
   - go run tools/ci/main.go integration --timeout 300
