--- a/docker/rexecd-mysql-server.yml
+++ b/docker/rexecd-mysql-server.yml
@@ -15,16 +15,14 @@ services:
       - METAL_LOG_LEVEL=debug
       - METAL_REXECD_DATA_SOURCE_NAME=root:password@tcp(docker_db_1:3306)/
       - METAL_REXECD_SERVER_TYPE=mysql
+    depends_on:
+      - db
+      - kafka
+      - zoo
     links:
       - db
-
-  host01:
-    network_mode: bridge
-    ports:
-      - "2222:22"
-    image: panubo/sshd
-    volumes:
-      - ~/.ssh/id_rsa.pub:/root/.ssh/authorized_keys
+      - kafka
+      - zoo
 
   db:
     image: mysql
@@ -37,3 +35,37 @@ services:
     tty: true
     ports:
       - 3306:3306
+
+  host01:
+    network_mode: bridge
+    ports:
+      - "2222:22"
+    image: panubo/sshd
+    volumes:
+      - ~/.ssh/id_rsa.pub:/root/.ssh/authorized_keys
+
+  kafka:
+    image: wurstmeister/kafka
+    network_mode: bridge
+    ports:
+      - 9092:9092
+    environment:
+      KAFKA_LISTENERS: PLAINTEXT://127.0.0.1:9092
+      KAFKA_ZOOKEEPER_CONNECT: zoo:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zoo
+    links:
+      - zoo
+
+  zoo:
+    image: zookeeper
+    network_mode: bridge
+    restart: always
+    hostname: zoo1
+    ports:
+      - 2181:2181
+    environment:
+      ZOO_MY_ID: 1
+      ZOO_SERVERS: server.1=0.0.0.0:2888:3888
